# Frankie

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.catpaw/: rules
.catpaw/skills/update-docs-after-release/: SKILL.md
config/: _index.example.md  settings.toml
design/: MVP-ability.md  MVP-animation.md  MVP-frontend.md  MVP.md
frontend/: index.html  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: MessageContent.tsx
frontend/src/views/: Chat.tsx  FileLibrary.tsx  Settings.tsx
src/frankie/: __init__.py  agent.py  cli.py  config.py  llm.py  schema.py  vault.py  web.py
src/nemsy/: __init__.py  agent.py  cli.py  config.py  llm.py  vault.py  web.py
tests/: README.md  __init__.py  test_smoke.py  test_web_runtime.py
