[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frankie"
version = "0.1.0"
description = "Frankie - 厦门大学课程辅助系统"
requires-python = ">=3.11"
dependencies = [
    # LLM — Anthropic SDK（DeepSeek 兼容 Anthropic 协议，适配 MCP Tool Calls）
    "anthropic>=0.40.0",
    # Obsidian / Markdown
    "markdown-it-py>=3.0.0",
    "python-frontmatter>=1.1.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
    # Config
    "tomli>=2.0.0; python_version < '3.11'",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Utilities
    "httpx>=0.27.0",
    "anyio>=4.4.0",
]

[project.scripts]
frankie = "frankie.cli:main"
frankie-smoke = "frankie.cli:smoke"
frankie-web = "frankie.cli:web"

[project.optional-dependencies]
web = [
    # Web 后端
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # 静态文件托管
    "aiofiles>=23.2.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/frankie"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v -s"
